--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
                     <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x"
                             media="(max-width: 37.5em)">
                     <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo" src="img/logo-green-2x.png">
+                    <!-- source bevri sheidzleba ikos sxvadasxva mediati -->
                 </picture>
 
 
